[package]
name = "bones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bones"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
clap = "3.1.18"
rand = "0.8.5"
rand_chacha = "0.3.1"
urandom = "0.1.0"
env_logger = "0.9.0"
log = "0.4.17"